# framework-benchmarks

./: .gitignore  Dockerfile  LICENSE  _redirects  config.json  docker-compose.yml  eslint.config.mjs  frameworks.json  index.html  manifest.json  package-lock.json  package.json  playwright.config.js  robots.txt  sitemap.xml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  dependabot.yml
404/: index.html
alpine/: index.html
angular/: index.html
charts/: build_efficiency_scatter.json  build_time_donut.json  bundle_size_comparison.json  dev_server_performance.json  lighthouse_radial.json  load_timeline.json  maintainability_treemap.json  performance_quadrant.json  performance_radar.json  production_build_efficiency.json  project_size_pie.json  resource_consumption.json  (+1 more)
scripts/: README.txt  common.py  get_frameworks.py  main.py  pyproject.toml  requirements.txt  utils.js
scripts/benchmark/: base.py  build_time.py  bundle_size.py  chrome_launcher.py  dev_server.py  lighthouse.py  main.py  resource_monitor.py  source_analysis.py
scripts/run/: build.py  build_website.py  generator.py  serve.py  set-base-hrefs.js
scripts/setup/: generate_mocks.py  generate_scripts.py  install_deps.py  main.py  sync_assets.py
scripts/transform/: benchmark_results.py  benchmark_results_json.py  benchmark_results_tsv.py  build_app_readme.py  build_charts.py  fetch_framework_stats.py  insert_framework_stats.py  insert_statuses.py
scripts/verify/: check.py  config-schema.json  frameworks-schema.json  lint.py  main.py  test.py  validate_schemas.py
(+665 files in other folders)
