[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "framework-benchmarks-scripts"
version = "1.0.0"
description = "Python scripts for Weather Front benchmarking project"
readme = "README.txt"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0", 
    "flask>=2.0.0",
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=4.0.0",
]

[project.scripts]
weather-setup = "setup.main:setup_all"
weather-verify = "verify.main:verify_all"
weather-serve = "run.serve:serve"
weather-build = "run.build:build_all"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  __pycache__
  | \.git
  | \.venv
  | venv
  | \.mypy_cache
  | \.pytest_cache
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    "__pycache__",
    ".git",
    ".venv",
    "venv",
]
